[gd_scene format=3 uid="uid://dt8vx5g8yasfa"]

[ext_resource type="Script" uid="uid://dp3cg8qisr1dq" path="res://Systems/Effect System/Effect_Slot.gd" id="1_f7pwb"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_m1m28"]
size = Vector2(80, 80)

[node name="Effect_Slot" type="Node2D" unique_id=4427040]
script = ExtResource("1_f7pwb")

[node name="Slot_Color" type="ColorRect" parent="." unique_id=1492203046]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -40.0
offset_top = -40.0
offset_right = 40.0
offset_bottom = 40.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
mouse_filter = 2
color = Color(0.5183813, 0.42700657, 0.5606931, 1)

[node name="Effect_Sprite" type="Sprite2D" parent="." unique_id=166472496]

[node name="Slot_Area" type="Area2D" parent="." unique_id=1841485933]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Slot_Area" unique_id=1982604123]
shape = SubResource("RectangleShape2D_m1m28")
